force-app/main/default/objects/Proposal_Style_Guide__c/Proposal_Style_Guide__c.object-meta.xml
<CustomObject>
    <label>Proposal Style Guide</label>
    <nameField>
        <displayFormat>PSG-{0000}</displayFormat>
        <label>Proposal Style Guide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Style Guides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>