force-app/main/default/objects/Proposal_Style_Guide__c/fields/Checks__c.field-meta.xml
<CustomField>
    <fullName>Checks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checks</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>