force-app/main/default/objects/Proposal_Style_Guide__c/fields/Guideline__c.field-meta.xml
<CustomField>
    <fullName>Guideline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guideline</label>
    <length>92768</length>
    <type>LongTextArea</type>
</CustomField>