force-app/main/default/objects/Proposal_Style_Guide__c/fields/Subsection_Title__c.field-meta.xml
<CustomField>
    <fullName>Subsection_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subsection Title</label>
    <type>TextArea</type>
</CustomField>