force-app/main/default/objects/Proposal_Style_Guide__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subsection_Title__c</columns>
    <columns>Guideline__c</columns>
    <columns>IsActive__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>General Checks</value>
    </filters>
    <label>All</label>
</ListView>